<resources>
    <string name="app_name">Scylla Task</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_txt"><font color="#E3E3F4">Sign in </font> <font color="#04C3FF">to Scylla</font></string>
    <string name="login_hint">Email or Username*</string>
    <string name="password_hint">Password*</string>
    <string name="sign_in_btn_txt">Sign in</string>
    <string name="my_tickets">My Tickets</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ticket">Ticket</string>
    <string name="add_to_wallet">add to wallet</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="try_again">try again</string>

</resources>